@@ -9,7 +9,8 @@ const (
 	ExperimentDbxClientConditionerError40  = "dbx_client_conditioner_error40"  // 500 error for 40% traffic
 	ExperimentDbxClientConditionerError100 = "dbx_client_conditioner_error100" // 500 error for 100% traffic
 
-	ExperimentDbxAuthRedirect = "dbx_auth_redirect"
+	ExperimentDbxAuthRedirect           = "dbx_auth_redirect"
+	ExperimentDbxAuthCourseGrainedScope = "dbx_auth_course_grained_scope"
 
 	// Execute batch sequentially in same batchId
 	ExperimentBatchSequential = "batch_sequential"
@@ -55,6 +56,7 @@ var (
 		ExperimentBatchSequential,
 		ExperimentCongestionWindowAggressive,
 		ExperimentCongestionWindowNoLimit,
+		ExperimentDbxAuthCourseGrainedScope,
 		ExperimentDbxAuthRedirect,
 		ExperimentDbxClientConditionerError100,
 		ExperimentDbxClientConditionerError20,
