@@ -842,7 +842,8 @@
   "infra.doc.dc_supplemental.experimental_feature_definitions.batch_sequential.desc": "Execute batch sequentially in same batchId.",
   "infra.doc.dc_supplemental.experimental_feature_definitions.congestion_window_aggressive.desc": "Apply aggressive initial congestion window size",
   "infra.doc.dc_supplemental.experimental_feature_definitions.congestion_window_no_limit.desc": "Do not limit concurrency with the congestion window.",
-  "infra.doc.dc_supplemental.experimental_feature_definitions.dbx_auth_redirect.desc": "",
+  "infra.doc.dc_supplemental.experimental_feature_definitions.dbx_auth_course_grained_scope.desc": "Requests all Dropbox authorization scopes instead of command-defined ones. This is used as a workaround in case the program does not work properly with the authorization scope defined in the command.",
+  "infra.doc.dc_supplemental.experimental_feature_definitions.dbx_auth_redirect.desc": "Use redirect processing for authorization process to Dropbox",
   "infra.doc.dc_supplemental.experimental_feature_definitions.dbx_client_conditioner_error100.desc": "Simulate server errors. 100% of requests will fail with a server error.",
   "infra.doc.dc_supplemental.experimental_feature_definitions.dbx_client_conditioner_error20.desc": "Simulate server errors. 20% of requests will fail with a server error.",
   "infra.doc.dc_supplemental.experimental_feature_definitions.dbx_client_conditioner_error40.desc": "Simulate server errors. 40% of requests will fail with a server error.",
