@@ -5,3 +5,4 @@
 #639 : watermint toolbox Deployment command
 #643 : new contributor doc
 #623 : new authentication framework
+#644 : course-grained auth scope
